adapting template to base service needed for this showcase